fix: remove scrollbar webkit css

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,24 +26,6 @@ h1 h2 h3 h4 h5 h6 {
   color: #FFFFFF;
 }
 
-/* width */
-::-webkit-scrollbar {
-  width: 100%;
-  height: 5px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #2D3142;
-  border-radius: 10px;
-}
-
 .prose {
   max-width: 1152px;
   margin-left: auto;
